--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
     font-family: "Montserrat", sans-serif;
     background-color: #f5f5f5;
 }
+li {
+    list-style: none;
+}
 
 /* map */
 .mapContainer {
@@ -67,6 +70,7 @@ body {
 }
 .category__title {
     font-weight: 500;
+    flex: 1;
 }
 .category__arrow {
     transition: transform 250ms ease;
@@ -75,6 +79,7 @@ body {
     padding: 0 1rem;
     max-height: 0;
     transition: max-height 250ms ease;
+    overflow: clip;
 }
 .category--expanded .category__content {
     max-height: 500px;
@@ -82,4 +87,23 @@ body {
 }
 .category--expanded .category__arrow {
     transform: rotate(90deg);
+}
+
+/* locations */
+.location {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.location:last-child {
+    margin-bottom: 0;
+}
+.location__checkbox {
+    margin-right: 1rem;
+}
+.location__label {
+    color: #555;
+}
+.location__label:hover {
+    color: #333;
 }
